--- a/Lógica/Resources/reportePRODUCTO.html
+++ b/Lógica/Resources/reportePRODUCTO.html
@@ -53,8 +53,8 @@
         	<td colspan="2">
             	<table style="width: 100%">
                 	<tr>
-                    	<td colspan="1" style="width: 20%">REPORTE: </td>
-                    	<td colspan="3" style="width: 80%;border-Bottom:2px solid black">@PRODUCTOS</td>
+                    	<td colspan="1" style="width: 20%">ADMINISTRADOR: </td>
+                    	<td colspan="3" style="width: 80%;border-Bottom:2px solid black">ADMIN</td>
                 	</tr>
               	 
             	</table>
